@@ -1,16 +1,17 @@
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 public class App {
-    public static void main(String[] args) throws Exception {
-        URI hURI = null;
+    public static void main(String[] args) {
+        URL hURL = null;
 
         System.out.println("=== Program start ===");
         try {
-            hURI = new URI("https://univ-corse.fr");
-            System.out.println("URI valide.");
-        } catch(URISyntaxException ex) {
-            System.err.println("L'URI renseigner est invalide.");
+            hURL = new URL("https://univ-corse.fr");
+            System.out.println("URL valide.");
+        } catch(MalformedURLException ex) {
+            System.err.print(ex.getMessage());
+            System.err.println("L'URL renseigner est invalide.");
         }
         System.out.println("=== Program stop ===");
     }
